--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'org.greenrobot:greendao:3.2.2'
-
+    compile 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
+    compile 'com.android.support:support-v4:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
